saving current state, need to update main
